Fix multi-line box wrapping on Edge

--- a/bootstrap/scss/_custom.scss
+++ b/bootstrap/scss/_custom.scss
@@ -103,12 +103,32 @@ header.hero {
     }
 
     p {
+        display: inline;
+        position: relative;
+        
+        white-space: pre-wrap;
         line-height: 1.7;
+        border: 0 solid $brand-primary;
+        border-width: 0.3em 0;
 
-        span {
+        &, &:after {
             background: $brand-primary;
-            padding: 0.5rem 1rem;
-            box-decoration-break: clone;
+        }
+        &:after {
+            content: "";
+            position: absolute;
+            top: -0.3em;
+            right: 100%;
+            bottom: -0.3em;
+            width: 0.3em;
+        }
+
+        > span {
+            position: relative;
+            z-index: 1;
+            padding-right: 0.3em;
+            /*padding: 0.5rem 1rem;
+            box-decoration-break: clone;*/
         }
     }
 }
@@ -122,7 +142,7 @@ footer {
     background: $footer-background;
     margin-top: 4em;
     padding-top: 2em;
-    padding-bottom: 4em;
+    padding-bottom: 3em;
     font-size: $small-font-size;
     color: $footer-text-color;
 
